--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/portfolio-backend
+spring.datasource.url=jdbc:mysql://localhost:3306/portfolio_backend
 spring.datasource.username=root
 spring.datasource.password=password305
 spring.jpa.hibernate.ddl-auto=update
