--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/portfolio_backend
-spring.datasource.username=root
-spring.datasource.password=password305
+spring.datasource.url=jdbc:mysql://uc8kim3mkoaudd0c:ZEuVA1BZuax53WiZEDSt@b0yk7aeloz54skkhyymh-mysql.services.clever-cloud.com:3306/b0yk7aeloz54skkhyymh
+spring.datasource.username=uc8kim3mkoaudd0c
+spring.datasource.password=ZEuVA1BZuax53WiZEDSt
 spring.jpa.hibernate.ddl-auto=update
