--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.datasource.url=jdbc:mysql://uc8kim3mkoaudd0c:ZEuVA1BZuax53WiZEDSt@b0yk7ae
 spring.datasource.username=uc8kim3mkoaudd0c
 spring.datasource.password=ZEuVA1BZuax53WiZEDSt
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.hikari.maximum-pool-size=5
+server.port=1000
